--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -8,6 +8,12 @@
   box-sizing: border-box;
 }
 
+html, body, #root {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
